--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -75,32 +75,35 @@
         </div>
         <div class="u-wrapper">
             <div class="c-blog__body">
+                <p class="c-blog__paragraph">La verificación vehicular es un programa de gobierno que nace con la intensión de reducir lo mayor posible la emisión de gases contaminantes producidos por nuestros vehículos  y que salen a la atmósfera, cumplir con esta es un requisito obligatorio, que al no realizarse nos hace acredores a costosas multas y ponemos en riesgo nuestro patrimonio dañando nuestro vehículo. Sabemos que pasar la prueba puede ser un tanto complicado así que aquí te dejamos 5 tips para aprobarla sin mayor dificultad.</p>
                 <div class="c-blog__list-item">
                     <div class="c-blog__list-item__bullet c-blog__list-item__bullet--money">1.</div>
-                    <h3 class="c-blog__list-item__title c-blog__list-item__title--money">Que nuestro auto esté correctamente afinado</h3>
-                    <p class="c-blog__list-item__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                    <h3 class="c-blog__list-item__title c-blog__list-item__title--money">Que tu auto esté correctamente afinado</h3>
+                    <p class="c-blog__list-item__text">La afinación es la sincronización perfecta de todos los componentes del motor (bujías, filtros, niveles de aceite y limpieza de los inyectores, por nombrar algunos). Estando bien afinado el auto consume menos combustible, trabaja eficientemente, contamina menos y prolongamos la vida útil del motor. Te recomendamos hacerla antes de verificar (cada 6 meses).</p>
                 </div>
                 <div class="c-blog__list-item">
                     <div class="c-blog__list-item__bullet c-blog__list-item__bullet--money">2.</div>
                     <h3 class="c-blog__list-item__title c-blog__list-item__title--money">Que no tenga fugas en el sistema de escape</h3>
-                    <p class="c-blog__list-item__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                    <p class="c-blog__list-item__text">El sistema de escape se encarga de expulsar los gases contaminantes que se generan en el motor hacia el exterior del vehículo. Al no tener fugas, nos aseguramos que los gases nocivos no entren a la cabina y afecten la salud de los pasajeros. Una fuga podría provocar que se diluya la muestra de gases que se analiza y no pasar la verificación.</p>
                 </div>
                 <div class="c-blog__list-item">
                     <div class="c-blog__list-item__bullet c-blog__list-item__bullet--money">3.</div>
                     <h3 class="c-blog__list-item__title c-blog__list-item__title--money">Que tenga válvula, PCV, tapón de aceite y bayoneta</h3>
-                    <p class="c-blog__list-item__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                    <p class="c-blog__list-item__text">Estos componentes tienen la función de garantizar que el vapor de aceite que se genera en el interior del motor sea conducido de manera correcta al sistema de escape donde será procesado para ruducir al mínimo su impacto al medio ambiente. Al tener estas piezas en correcto estado, nos aseguramos de que no se emitan gases "azulados" y por lo tanto nuestro auto pase la prueba visual de verificación.</p>
                 </div>
                 <div class="c-blog__list-item">
                     <div class="c-blog__list-item__bullet c-blog__list-item__bullet--money">4.</div>
                     <h3 class="c-blog__list-item__title c-blog__list-item__title--money">Que esté en buen estado el convertidor catalítico.</h3>
-                    <p class="c-blog__list-item__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                    <p class="c-blog__list-item__text">Esta pieza del sistema de escape se encarga de reducir al mínimo los gases contaminantes (monóxido de carbono, hidrocarburos, bióxido de carbono y óxidos de nitrógeno) que nuestro auto expulsa. Al estar en buen estado reduciremos el daño al medio ambiente.</p>
                 </div>
                 <div class="c-blog__list-item">
                     <div class="c-blog__list-item__bullet c-blog__list-item__bullet--money">5.</div>
-                    <h3 class="c-blog__list-item__title c-blog__list-item__title--money">Que esté en buen estado los sensores de oxígeno.</h3>
-                    <p class="c-blog__list-item__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                    <h3 class="c-blog__list-item__title c-blog__list-item__title--money">Que estén en buen estado los sensores de oxígeno.</h3>
+                    <p class="c-blog__list-item__text">Estos sensores se encargan de medir los niveles de óxigeno del ambiente en el que nos encontremos para confirmar que la cantidad que entra al motor sea la más adecuada para una combustión eficiente. Esto significa que el combustible se está quemando de manera correcta y la cantidad de residuos contaminantes que llegan al sistema de escape son mínimos y puedan ser bien procesados por el convertidor catalítico.</p>
                 </div>
             </div>
+            <p class="c-blog__paragraph">Si cumples con todos los puntos que te mencionamos es prácticamente un hecho que pasarás la prueba de verificación vehicular sin mayor complicación. Esto te traerá una serie de beneficios más allá de evitar costosas multas; podrás estar tranquilo de que tu auto contamina lo menos posible al medio ambiente, cuidarás tu patrimonio aumentando la vida útil de tu vehículo y con tu pago estarás apoyando programas de protección y conservación del medio ambiente.</p>
+            <p class="c-blog__paragraph">Si te llega a faltar alguno de estos puntos te recomendamos acudas con tu mecánico de confianza lo más pronto posible, porque más allá de estar contaminando el medio ambiente tambien estarás dañando gravemente tu vehículo.</p>
         </div>
     </main>
     <section class="c-cta-banner">
